# wsmr

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.coverage  Containerfile.systemd  LICENSE  Makefile  README.md  THIRD-PARTY-LICENSES  justfile  renovate.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: uwsm-core-analysis.md
libexec/: prepare-env.sh  signal-handler.sh
scripts/: coverage.sh  linux-build.sh  linux-integration.sh  linux-test.sh
src/: cli.rs  comp.rs  coverage.rs  error.rs  filter.rs  lib.rs  main.rs  testutil.rs  varnames.rs
src/app/: daemon.rs  entry.rs  field.rs  find.rs  launch.rs  mod.rs  naming.rs  terminal.rs
src/env/: delta.rs  dump.rs  files.rs  mod.rs
src/session/: check.rs  cleanup.rs  exec.rs  finalize.rs  helpers.rs  mod.rs  prepare.rs  start.rs  stop.rs  wait.rs
src/sysd/: dbus.rs  mod.rs
src/units/: escape.rs  generate.rs  mod.rs  templates.rs
src/util/: mod.rs  xdg.rs
tests/integration/: coverage-run.sh  smoke.sh  stub-compositor.sh
