[package]
name = "wsmr"
version = "0.1.0"
edition = "2024"

# `coverage` is set by cargo-llvm-cov alongside -Cinstrument-coverage; declare it
# so check-cfg (and thus `clippy -D warnings`) doesn't flag it as unexpected.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
zbus = "5.16.0"
