[package]
name = "wsmr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive", "env"] }
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
zbus = "5.17.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
